--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   },
   "dependencies": {
     "base64url": "^3.0.1",
+    "big.js": "^5.0.3",
+    "browser-request": "^0.3.3",
     "buefy": "^0.8.16",
     "ccxt": "1.26.84",
     "core-js": "^3.6.4",
-    "lodash": "^4.17.15",
-    "odex-client-browser": "git+https://github.com/Papabyte/odex-client-browser.git",
-    "vue": "^2.6.11",
-    "big.js": "^5.0.3",
-    "browser-request": "^0.3.3",
-    "retry": "^0.10.1",
     "is-url": "^1.2.4",
+    "lodash": "^4.17.15",
     "obyte": "^0.1.8",
-    "secp256k1": "^3.7.1"
+    "odex-client-browser": "git+https://github.com/Papabyte/odex-client-browser.git",
+    "retry": "^0.10.1",
+    "secp256k1": "^3.7.1",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
@@ -39,8 +39,7 @@
     "extends": [
       "plugin:vue/essential"
     ],
-    "parserOptions": {
-    },
+    "parserOptions": {},
     "rules": {}
   },
   "browserslist": [
